syntax = "proto3";

package gitops_core.v1;

option go_package = "github.com/weaveworks/weave-gitops/core/api";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "api/core/types.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "Weave GitOps Core API",
      version: "0.1";
      description: "The API handles operations for Weave GitOps Core";
    };
    consumes: "application/json";
    produces: "application/json";
};

service Core {
    /*
    * GetObject gets data about a single primary object from a cluster.
    */
    rpc GetObject(GetObjectRequest) returns (GetObjectResponse) {
        option (google.api.http) = {
            get: "/v1/object/{name}"
        };
    }


    /*
    * ListObjects gets data about primary objects.
    */
    rpc ListObjects(ListObjectsRequest) returns (ListObjectsResponse) {
        option (google.api.http) = {
            post: "/v1/objects"
            body: "*"
        };
    }

    // Misc
    /*
     * ListFluxRuntimeObjects lists the flux runtime deployments from a cluster.
     */
    rpc ListFluxRuntimeObjects(ListFluxRuntimeObjectsRequest) returns (ListFluxRuntimeObjectsResponse) {
        option (google.api.http) = {
            get: "/v1/flux_runtime_objects"
        };
    }

    rpc ListFluxCrds(ListFluxCrdsRequest) returns (ListFluxCrdsResponse) {
        option (google.api.http) = {
            get: "/v1/flux_crds"
        };
    }

    /**
    * GetReconciledObjects returns a list of objects that were created as a result a Flux automation.
    * This list is derived by looking at the Kustomization or HelmRelease specified in the request body.
    */
    rpc GetReconciledObjects(GetReconciledObjectsRequest) returns (GetReconciledObjectsResponse) {
        option (google.api.http) = {
            post: "/v1/reconciled_objects"
            body: "*"
        };
    };

    /**
    * GetChildObjects returns the children of a given object, specified by a GroupVersionKind.
    * Not all Kubernets objects have children. For example, a Deployment has a child ReplicaSet, but a Service has no child objects.
    */
    rpc GetChildObjects(GetChildObjectsRequest) returns (GetChildObjectsResponse) {
        option (google.api.http) = {
            post: "/v1/child_objects"
            body: "*"
        };
    };

    /*
     * GetFluxNamespace returns with a namespace with a specific label.
     */
    rpc GetFluxNamespace(GetFluxNamespaceRequest) returns (GetFluxNamespaceResponse) {
        option (google.api.http) = {
            post: "/v1/namespace/flux"
            body: "*"
        };
    }

    /*
     * ListNamespaces returns with the list of available namespaces.
     */
    rpc ListNamespaces(ListNamespacesRequest) returns (ListNamespacesResponse) {
        option (google.api.http) = {
            get: "/v1/namespaces"
        };
    }
    /*
     * ListEvents returns with a list of events
     */
    rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {
        option (google.api.http) = {
            get: "/v1/events"
        };
    }

    /*
     * SyncResource forces a reconciliation of a Flux resource
     */
    rpc SyncFluxObject(SyncFluxObjectRequest) returns (SyncFluxObjectResponse) {
        option (google.api.http) = {
            post: "/v1/sync"
            body: "*"
        };
    }

    /*
     * GetVersion returns version information about the server
     */
    rpc GetVersion(GetVersionRequest) returns (GetVersionResponse){
        option (google.api.http) = {
            get: "/v1/version"
        };
    }

    /**
    * GetFeatureFlags returns configuration information about the server
    */
    rpc GetFeatureFlags(GetFeatureFlagsRequest) returns (GetFeatureFlagsResponse) {
        option (google.api.http) = {
            get: "/v1/featureflags"
        };
    }

    /*
     * ToggleSuspendResource suspends or resumes a flux object.
     */
    rpc ToggleSuspendResource(ToggleSuspendResourceRequest) returns (ToggleSuspendResourceResponse) {
        option (google.api.http) = {
            post: "/v1/suspend"
            body: "*"
        };
    }

    /*
     * GetSessionLogs returns the logs for a given session
     */
    rpc GetSessionLogs(GetSessionLogsRequest) returns (GetSessionLogsResponse) {
        option (google.api.http) = {
            get: "/v1/session/{sessionId}/logs"
        };
    }
}

message Pagination {
    int32 pageSize = 1;
    string pageToken = 2;
}

message ListError {
    string clusterName = 1;
    string namespace = 2;
    string message = 3;
}

message ListFluxRuntimeObjectsRequest {
    string namespace   = 1;
    string clusterName = 2;
}

message ListFluxRuntimeObjectsResponse {
    repeated Deployment deployments = 1;
    repeated ListError errors = 2;
}

message ListFluxCrdsRequest {
    string clusterName = 1;
}

message ListFluxCrdsResponse {
    repeated Crd crds = 1;
    repeated ListError errors = 2;
}

message GetObjectRequest {
    string name        = 1;
    string namespace   = 2;
    string kind        = 3;
    string clusterName = 4;
}

message GetObjectResponse {
    Object object = 1;
}

message ListObjectsRequest {
    string namespace   = 1;
    string kind        = 2;
    string clusterName = 3;
    map<string, string> labels = 4;
}

message ListObjectsResponse {
    repeated Object objects = 1;
    repeated ListError errors = 2;
}

message GetReconciledObjectsRequest {
    string         automationName         = 1;
    string         namespace              = 2;
    string         automationKind         = 3;
    repeated       GroupVersionKind kinds = 4;
    string         clusterName            = 5;
}

message GetReconciledObjectsResponse {
    repeated Object objects = 1;
}

message GetChildObjectsRequest {
    GroupVersionKind groupVersionKind = 1;
    string           namespace        = 2;
    string           parentUid        = 3;
    string           clusterName      = 4;
}

message GetChildObjectsResponse {
    repeated Object objects = 1;
}

message GetFluxNamespaceRequest {}

message GetFluxNamespaceResponse {
  string name = 1;
}

message ListNamespacesRequest {}

message ListNamespacesResponse {
  repeated Namespace namespaces = 1;
}

message ListEventsRequest {
    ObjectRef involvedObject = 1;
}

message ListEventsResponse {
    repeated Event events = 1;
}

message SyncFluxObjectRequest {
    repeated ObjectRef objects    = 1;
    bool               withSource = 2;
}

message SyncFluxObjectResponse {
}

message GetVersionRequest {}

message GetVersionResponse {
    string semver    = 1;
    string commit    = 2;
    string branch    = 3;
    string buildTime = 4;
    string fluxVersion = 5;
    string kubeVersion = 6;
}

message GetFeatureFlagsRequest {}

message GetFeatureFlagsResponse {
    map<string, string> flags = 1;
}

message ToggleSuspendResourceRequest {
    repeated ObjectRef objects = 1;
    bool               suspend = 2;
}

message ToggleSuspendResourceResponse {
}

message GetSessionLogsRequest {
    string sessionId   = 1;
    string token       = 2;
    string clusterName = 3;
    string namespace   = 4;
}

message GetSessionLogsResponse {
    repeated string logs = 1;
    string nextToken     = 2;
}
